Switch to nextcord for Python 3.13 compatibility

--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,13 @@ services:
   - type: web
     name: discord-mod-bot
     env: python
-    pythonVersion: "3.11"
-    buildCommand: pip install -r requirements.txt
+    pythonVersion: "3.11.8"
+    buildCommand: |
+      python --version
+      pip install -r requirements.txt
     startCommand: python bot.py
     envVars:
       - key: DISCORD_TOKEN
-        sync: false 
+        sync: false
+      - key: PYTHON_VERSION
+        value: "3.11.8" 
