--- a/render.yaml
+++ b/render.yaml
@@ -4,11 +4,13 @@ services:
     env: python
     pythonVersion: "3.11"
     buildCommand: |
-      python --version
-      pip install -r requirements.txt
+      chmod +x build.sh
+      ./build.sh
     startCommand: python bot.py
     envVars:
       - key: DISCORD_TOKEN
         sync: false
       - key: PYTHON_VERSION
-        value: "3.11" 
+        value: "3.11"
+      - key: PYTHONPATH
+        value: "/opt/render/project/src" 
