--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,8 @@
 services:
   - type: web
     name: discord-mod-bot
-    env: python
-    pythonVersion: "3.11"
-    buildCommand: |
-      chmod +x build.sh
-      ./build.sh
-    startCommand: python bot.py
+    env: docker
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: DISCORD_TOKEN
-        sync: false
-      - key: PYTHON_VERSION
-        value: "3.11"
-      - key: PYTHONPATH
-        value: "/opt/render/project/src" 
+        sync: false 
